fix reponsive issue on mobile view

--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -4,7 +4,7 @@
 
   .root-navigation {
     width: 100%;
-    height: 72px;
+    height: 56px;
     margin: auto;
     padding: 0 16px;
     border-bottom: none;
@@ -22,6 +22,7 @@
     @media screen and (min-width: 960px) {
       padding-right: 24px;
       padding-left: 24px;
+      height: 72px;
     }
 
     @media screen and (min-width: 1440px) {
